# LocalRAGApp

./: .gitignore  AGENTS.md  LICENSE  PROJECT_GUIDE.md  README.md  benchmark_cases.json  embedding_test.py  eval.py  eval_cases.json  foundry_test.py  main.py  pyproject.toml  requirements.txt
app/: benchmark.py  cli_output.py  config.py  database.py  document_manager.py  embeddings.py  health.py  index_state.py  ingest.py  llm.py  prompts.py  retrieval.py
docs/: cybersecurity.txt  example.txt
tests/: test_benchmark.py  test_cli_output.py  test_document_manager.py  test_embeddings.py  test_entrypoint.py  test_eval.py  test_health.py  test_index_state.py  test_ingest.py  test_llm.py  test_retrieval.py
