[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-rag-assistant"
dynamic = ["version"]
description = "Yerel TXT ve PDF dokümanları için Türkçe terminal RAG asistanı"
requires-python = ">=3.11"
dependencies = [
    "foundry-local-sdk==0.5.1",
    "huggingface_hub==0.36.2",
    "numpy==2.0.2",
    "openai==2.44.0",
    "pypdf==6.14.2",
    "rich==15.0.0",
    "scikit-learn==1.6.1",
    "sentence-transformers==5.1.2",
]

[project.scripts]
local-rag = "main:cli"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.dynamic]
version = {attr = "app.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
